2007-09-08  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: |UNICODE-RANGE| is implemented.

2007-09-08  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: |COMMENT| is implemented. 
	A bug for treatement for |@-->| is fixed.

2007-09-08  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: |url()| and |url-prefix()| are implemented.
	Bug for treatement for |@-| is fixed.

2007-09-08  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: First working version.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* Tokenizer.pm: New module.

	* ChangeLog: New file.
