@@ -1,5 +1,9 @@
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-token-1.test: New tests are added.
+
+2007-09-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-token-1.test, CSS-Tokenizer.t: New files.
 
 2007-09-04  Wakaba  <wakaba@suika.fam.cx>
